# engineering-basics

./: README.md
工程互联网/桥梁/: README.md  sensor_def.json  sensor_viewer.html
工程互联网/桥梁/19-1/: freq.html  train.py
工程互联网/桥梁/annotation/: annotations.csv  annotations3.csv
工程互联网/桥梁/data/: 246_wide.csv  4.2正式工况3.csv  displacement.csv  displacement_wide.csv  vibrate_wide.csv
工程互联网/桥梁/movement/: comparison_analysis.csv  detect.py  tracking_dist_dy_metrics.csv  tracking_result.csv
工程互联网/桥梁/outputs/: linear_models_15.json  mass_strain_metrics.json  model_stage2_load_classifier.joblib
工程互联网/桥梁/submit/: README.md  plot_sensor_positions_3d.py  plot_sensors.py
工程互联网/高层建筑/: prompt.txt
工程互联网/高层建筑/22-2/: README.md  prompt.txt
工程互联网/高层建筑/code/: infer.py  preprocess.py  readme.md  requirements.txt  train.py
工程互联网/高层建筑/raw_data/: Northr地震波.csv  Northr地震波_补测.csv  简谐波_5mm_1.2Hz.csv  简谐波_5mm_1.4Hz_补测.csv  简谐波_5mm_1.6Hz.csv  简谐波_5mm_1.8Hz_补测.csv  简谐波_5mm_1Hz.csv  简谐波_5mm_2.2Hz.csv  简谐波_5mm_2.4Hz_补测.csv  简谐波_5mm_2.6Hz.csv  简谐波_5mm_2.8Hz_补测.csv  简谐波_5mm_2Hz.csv  简谐波_5mm_3.2Hz.csv  简谐波_5mm_3.4Hz_补测.csv  简谐波_5mm_3.6Hz.csv  简谐波_5mm_3.8Hz.csv  简谐波_5mm_3Hz_补测.csv  简谐波_5mm_4.2Hz.csv  简谐波_5mm_4.4Hz.csv  简谐波_5mm_4.6Hz_补测.csv  简谐波_5mm_4.8Hz.csv  简谐波_5mm_4Hz.csv  简谐波_5mm_5Hz_补测.csv  自由振动.csv
机器人/19-1/: README.md
机器人/19-1/src/object_3d_locator_task/: package.xml  setup.cfg
机器人/19-1/src/object_3d_locator_task/object_3d_locator_task/: target_marker_viz.py
机器人/19-1/yolo/: classes.txt
机器人/src/: setup.py
机器人/yolo/: data.yaml  demo_random_test.py  notes.json
(+890 files in other folders)
