<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>object_3d_locator_task</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="2436210442@qq.com">ubuntu</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>interfaces</depend>
  <depend>cv_bridge</depend>
  <exec_depend>arm_task</exec_depend>
  <exec_depend>motor_task</exec_depend>
  <exec_depend>yolov11_detect</exec_depend>
  <exec_depend>rqt_image_view</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
